force-app/main/default/objects/AcctPlanSupplierOrBuyer__c/AcctPlanSupplierOrBuyer__c.object-meta.xml
<CustomObject>
    <label>Account Plan Supplier Or Buyer</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AcctPlanSupplierOrBuyer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Supplier Or Buyer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>