force-app/main/default/objects/AcctPlanSupplierOrBuyer__c/fields/CCY__c.field-meta.xml
<CustomField>
    <fullName>CCY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Currency</description>
    <inlineHelpText>CCY</inlineHelpText>
    <label>CCY</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Currency__c.FlagForAcctPlan__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>Account Plan Supplier Or Buyer</relationshipLabel>
    <relationshipName>Account_Plan_Supplier_Or_Buyer</relationshipName>
    <type>Lookup</type>
</CustomField>