force-app/main/default/objects/AcctPlanSupplierOrBuyer__c/fields/EstimateNo__c.field-meta.xml
<CustomField>
    <fullName>EstimateNo__c</fullName>
    <description>Estimate No. of Supplier or Buyer</description>
    <inlineHelpText>Estimate No. of Buyers</inlineHelpText>
    <label>Estimate No. of Supplier or Buyer</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>