force-app/main/default/objects/AcctPlanSupplierOrBuyer__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Method of account plan</description>
    <inlineHelpText>Method of Collection</inlineHelpText>
    <label>Method of Collection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Fund Transfer</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>