force-app/main/default/objects/AcctPlanSupplierOrBuyer__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Top 5 Buyers</fullName>
            </value>
            <value>
                <fullName>Major raw material</fullName>
            </value>
            <value>
                <fullName>Top 5 Suppliers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>